force-app/main/default/objects/ContactOpportunityStages__c/ContactOpportunityStages__c.object-meta.xml
<CustomObject>
    <label>ContactOpportunityStages</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>contactOpportunityStages Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContactOpportunityStages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>