force-app/main/default/objects/ContactOpportunityStages__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>salesmotion account related contact opportunity stage</description>
    <label>Opportunity Stage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan - 1%</fullName>
            </value>
            <value>
                <fullName>Discover - 10%</fullName>
            </value>
            <value>
                <fullName>Qualify - 30%</fullName>
            </value>
            <value>
                <fullName>Propose - 60%</fullName>
            </value>
            <value>
                <fullName>Commit - 90%</fullName>
            </value>
            <value>
                <fullName>Order Submitted - 99%</fullName>
            </value>
            <value>
                <fullName>Win - 100%</fullName>
            </value>
            <value>
                <fullName>Lost, Cancelled - 0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>