force-app/main/default/objects/ContactOpportunityStages__c/fields/SalesmotionAccount__c.field-meta.xml
<CustomField>
    <fullName>SalesmotionAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to Salesmotion type Account</description>
    <label>SalesmotionAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ContactOpportunityStages</relationshipLabel>
    <relationshipName>ContactOpportunityStages</relationshipName>
    <type>Lookup</type>
</CustomField>